--- a/project_frontend/WebContent/views/index.html
+++ b/project_frontend/WebContent/views/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<script>
-$(document).ready(function(){
-   $('.dropdown-toggle').dropdown()
-});
-</script>
-<meta charset="ISO-8859-1">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <script src="js/jqueryoffline.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" />
-
-<title>Index Page </title>
-</head>
-<body ng-app="app">
-
-<div class="container text-center" style=background-color: black; padding top:0px;>
- <marquee> <img src="pic/my job.png" height=100px width=250px>   
+    <head>
+        <title>title</title>
+        <meta charset="UTF-8">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <!--  Bootstrap, Angular Js ,Angular Route js -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.0/angular.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.0/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.0/angular-route.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.0/angular-cookies.min.js"></script>       
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" />
+        <link href="resources/css/bootstrap-theme.min.css" rel="stylesheet" />
+   </head>
+    <body ng-app="ngApp">
+        <div class="container text-center" style=background-color: black; padding top:0px;>
+ <marquee> <img src="pic/cutshort.png" height=100px width=250px>   
  </marquee> 
  <br>
   </div>
@@ -26,7 +25,7 @@ $(document).ready(function(){
             <nav class="navbar navbar-default" style=background-color:dark grey;>
             
            <div class="container-fluid" style=background-color:dark grey;>
-		<button type="button" class="navbar-toggle collapsed" 
+		<input type="button" class="navbar-toggle collapsed" 
    data-toggle="collapse" data-target="#collapse-example" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -34,46 +33,41 @@ $(document).ready(function(){
         <span class="icon-bar"></span>
       </button>
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#/home"> 	Cool Collab  </a>
+                    <a class="navbar-brand" href="#!home">CutShort</a>
                 </div>
-<div class="collapse navbar-collapse" id="collapse-example" style=background-color:dark grey;>
+<div class="collapse navbar-collapse" id="collapse-example" style=background-color:darkgrey;>
                 <ul class="nav navbar-nav ">
-                <li><a href="#/home">Home</a></li>
-                <li><a href="#/aboutus">About Us</a></li>
-                <li><a href="#/getUserDetails/{{currentUser.username}}" ng-show="currentUser.firstname">Welcome {{currentUser.firstname}} {{currentUser.lastname}} </a></li>
-                <li><a href="#/editprofile" ng-show="currentUser.firstname">Edit User Profile</a></li>
-                
-                
-                <li><a href="#/uploadprofilepic" ng-show="currentUser.username">
-                <img src="http://localhost:8090/project2_backend/getimage/{{currentUser.username}}" 
+                <li><a href="#!home">Home</a></li>
+                <li><a href="#!getUserDetails/{{currentUser.username}}" ng-show="currentUser.firstname">Welcome {{currentUser.firstname}} {{currentUser.lastname}} </a></li>
+                <li><a href="#!editprofile" ng-show="currentUser.firstname">Edit User Profile</a></li>
+                                
+                <li><a href="#!uploadprofilepic" ng-show="currentUser.username">
+                <img src="http://localhost:7001/projectbackend/getimage/{{currentUser.username}}" 
                 alt="upload Picture" width="30px" height="30px" class="img-rounded"></a></li>
                     
-                <li><a href="#/savejob" ng-show="currentUser.role=='ADMIN'">Save Job</a></li>
-                <li><a href="#/getalljobs" ng-show="currentUser.firstname">Get All Jobs</a></li>
+                <li><a href="#!savejob" ng-show="currentUser.role=='ADMIN'">Save Job</a></li>
+                <li><a href="#!getalljobs" ng-show="currentUser.firstname">Get All Jobs</a></li>
                 
                 <li class="dropdown"><a href="" class="dropdown-toggle"
                 data-toggle="dropdown" ng-show="currentUser.username"> Blog <b
                  class="caret"></b></a>
                  <ul class="dropdown-menu">
-                 <li><a href="#/getallblogs">View All Blogs</a></li>
-                 <li><a href="#/saveblogpost">Post Blog</a></li>
+                 <li><a href="#!getallblogs">View All Blogs</a></li>
+                 <li><a href="#!saveblogpost">Post Blog</a></li>
                  </ul>
-                 </li>
-                 
+                 </li>                 
                 <li class="dropdown"><a href="" class="dropdown-toggle"
                 data-toggle="dropdown" ng-show="currentUser.username"> Friend <b
                 class="caret"></b></a>
                 <ul class="dropdown-menu">
-                <li><a href="#/suggesteduserslist">List of Suggested Users </a></li>
-                <li><a href="#/pendingrequest"> Pending requests</a></li>
-                <li><a href="#/listoffriends">List Of Friends</a></li>
-                </ul></li>
-      
-                <li><a href="#/chat" ng-show="currentUser.firstname">Chat</a></li>
-                <li><a href="#/register" ng-hide="currentUser.firstname">Sign Up</a></li>
-                <li><a href="#/login" ng-hide="currentUser.firstname">Sign In</a></li>
-                <li><a href="" ng-click="logout()" ng-show="currentUser.firstname">logout</a>
-               
+                <li><a href="#!suggesteduserslist">List of Suggested Users </a></li>
+                <li><a href="#!pendingrequest"> Pending requests</a></li>
+                <li><a href="#!listoffriends">List Of Friends</a></li>
+                </ul></li>      
+                <li><a href="#!chat" ng-show="currentUser.firstname">Chat</a></li>
+                <li><a href="#!register" ng-hide="currentUser.firstname">Sign Up</a></li>
+                <li><a href="#!login" ng-hide="currentUser.firstname">Sign In</a></li>
+                <li><a href="" ng-click="logout()" ng-show="currentUser.firstname">logout</a>               
                 </ul>
 
 </div>
@@ -85,34 +79,23 @@ $(document).ready(function(){
         
        
 <div ng-view></div>
-</body>
-<script type="text/javascript"
-	src="js/angular.js"></script>
-	<script type="text/javascript"
-	src="js/angular-route.js"></script>
-	
-	<script type="text/javascript"
-	src="js/angular-cookies.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript" src="controller/usercontroller.js"></script>
-	<script type="text/javascript" src="service/userservice.js"></script>
-	<script type="text/javascript" src="controller/jobcontroller.js"></script>
-	<script type="text/javascript" src="service/jobservice.js"></script>
-	<script type="text/javascript" src="controller/blogpostcontroller.js"></script>
+</body>   
+    <script type="text/javascript" src="main/js/app.js"></script>
+    <script type="text/javascript" src="controller/usercontroller.js"></script>
+    <script type="text/javascript" src="service/userservice.js"></script>
+    <script type="text/javascript" src="service/jobservice.js"></script>
+    <script type="text/javascript" src="controller/jobController.js"></script>
+    <script type="text/javascript" src="controller/blogpostcontroller.js"></script>
 	<script type="text/javascript" src="service/blogpostservice.js"></script>
 	<script type="text/javascript" src="controller/blogpostdetailcontroller.js"></script>
+	<script type="text/javascript" src="controller/homecontroller.js"></script>
 	<script type="text/javascript" src="controller/friendcontroller.js"></script>
-	<script type="text/javascript" src="controller/jobdetailcontroller.js"></script>
-	<script type="text/javascript" src="controller/frienddetailcontroller.js"></script>
-	<script type="text/javascript" src="service/friendservice.js"></script>
 	<script src="js/sockjs/sockjs.js"></script>
     <script src="js/stomp/dist/stomp.js"></script>
-    <script type="text/javascript" src="controller/chatcontroller.js"></script>
-    <script type="text/javascript" src="service/chatservice.js"></script>
-	<link href="css/sample.css"/>
-	
-	
-<!-- footer  -->
+<script type="text/javascript" src="controller/chatcontroller.js"></script>
+<script type="text/javascript" src="controller/friendservice.js"></script>
+<script type="text/javascript" src="service/chatservice.js"></script>
+	<!-- footer  -->
 <style>
 footer {
       background-color: #f2f2f2;
@@ -185,33 +168,33 @@ footer {
 <div class="col-lg-2  col-md-2 col-sm-5 col-xs-6">
 <h3> Get to Know Us </h3>
 <ul>
-<li> <a href="#/contact"> Contact Us </a> </li>
-<li> <a href="#/aboutus"> About Us </a> </li>
+<li> <a href="#!contact"> Contact Us </a> </li>
+<li> <a href="#!aboutus"> About Us </a> </li>
 </ul>
 </div>
 <div class="col-lg-2  col-md-2 col-sm-5 col-xs-6">
 <h3> Contact Us </h3>
 <ul>
 <li><a href="#/contact"><span class="glyphicon glyphicon-iphone"></span>(+8801)7123456</a></li>
-<li> <a href="#/contact"><span class="glyphicon glyphicon-envelope"></span>support@coolcollab.com </a> </li>
+<li> <a href="#/contact"><span class="glyphicon glyphicon-envelope"></span>support@cutshort.com </a> </li>
 </ul>
 </div>
 <div class="col-lg-2  col-md-2 col-sm-5 col-xs-6">
 <h3> Our services </h3>
                     <ul>
-                        <li> <a href="#/saveblogpost"> Post Blog </a> </li>
-                        <li> <a href="#/getallblogs"> Read Blogs </a> </li>
-                        <li> <a href="#/getalljobs"> View Jobs here </a> </li>
-                        <li> <a href="#/chat"> Chat and be friends </a> </li>
+                        <li> <a href="#!saveblogpost"> Post Blog </a> </li>
+                        <li> <a href="#!getallblogs"> Read Blogs </a> </li>
+                        <li> <a href="#!getalljobs"> View Jobs here </a> </li>
+                        <li> <a href="#!chat"> Chat and be friends </a> </li>
                     </ul>
                 </div>
                 <div class="col-lg-2  col-md-2 col-sm-5 col-xs-6">
                     <h3> Address </h3>
                     <ul>
-                        <li> Cool Collab</li>
-                        <li> Ardee City, Sector 52,</li>
-                        <li> Gurgaon,  </li>
-                        <li> Haryana - 122011 </li>
+                        <li> CutShort</li>
+                        <li> IT City, Sector 52,</li>
+                        <li> Noida,  </li>
+                        <li> UP - 122011 </li>
                         <li> India </li>
                     </ul>
                 </div>
@@ -222,16 +205,14 @@ footer {
                         <li> <a href="https://plus.google.com/"> <i class="fa fa-google-plus">   </i> </a> </li>
                     </ul>
                 </div>
-            </div>
-            
-        </div>
-        
+            </div>            
+        </div>        
     </div>
     
     
     <div class="footer-bottom">
      <div class="container">
-    <p class="pull-left"> Copyright © Cool Collab 2017. All right reserved By Pratibha Singh. </p>
+    <p class="pull-left"> Copyright Â© cutShort 2017. All right reserved </p>
             
         </div>
     </div>
@@ -240,3 +221,6 @@ footer {
 </footer>	
 	
 </html>
+
+
+
